--- a/index.html
+++ b/index.html
@@ -13,30 +13,23 @@
             <div class="card">
                 <div class="container-gr8dient">
                 <h2 style="color: azure;font-weight: 100;font-size: 10rem;margin-bottom: -20px;">GR<span style="font-weight:600;">8</span>DIENT</h2>
-                <h3 style="font-weight:100;margin-bottom: 20px;font-size: 3.5rem;">now with coochie!</h3>
-                <div id="form" style="display: flex; flex-direction: column;">
-                    <input id="form-user" class="form-control" type="text" placeholder="user@gmail.com" style="text-align: center;font-weight: 100;width: 80%; justify-self: center; align-self: center;margin: 40px 0px 40px 0px;">
-                    <input id="form-password" class="form-control" type="password" placeholder="password" style="text-align: center;font-weight: 100;width: 80%; justify-self: center; align-self: center;margin: 20px 0px 40px 0px;">
-
-                    <button class="stupidlogin">log in</button>
-                    
-                    <button class="stupidlogin second">sign up</button>
-
-                    <p style="margin-top: 20px;font-size: 2rem;font-weight: 500;color: rgb(117, 117, 117);">Please enter your information.</p>
-
-                    <a class="forgot-password">Forgot your password?</a>
-                    <a class="forgot-below">Dumbass?</a>
-
-                    <p class="terms-conditions">Terms and Conditions | HubbStudios LLC 2021 &copy;</p>
+                <h3 style="font-weight:100;margin-bottom: 20px;font-size: 2.5rem;">Version Sugma 0.0.1</h3>
+                    <div id="form" style="display: flex; flex-direction: column;">
+                        <input id="form-user" class="form-control" type="text" placeholder="user@gmail.com" style="text-align: center;font-weight: 100;width: 80%; justify-self: center; align-self: center;margin: 40px 0px 40px 0px;">
+                        <input id="form-password" class="form-control" type="password" placeholder="password" style="text-align: center;font-weight: 100;width: 80%; justify-self: center; align-self: center;margin: 20px 0px 40px 0px;">
+                        <button class="stupidlogin">log in</button>
+                        <button class="stupidlogin second">sign up</button>
+                        <p style="margin-top: 20px;font-size: 2rem;font-weight: 500;color: rgb(117, 117, 117);">Please enter your information.</p>
+                        <a class="forgot-password">Forgot your password?</a>
+                        <a class="forgot-below">Dumbass?</a>
+                        <p class="terms-conditions">Terms and Conditions | HubbStudios LLC 2021 &copy;</p>
+                    </div>
                 </div>
-            </div>
             </div>
             <span class="circles"></span>
             <span class="circles number2"></span>
             <div class="box"></div>
             <div class="box number2"></div>
-
-
         </div>
     </body>
 </html>
