--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             <div class="box"></div>
             <div class="box number2"></div>
         </div>
-        <script src="/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
